Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-28752

Rollback of RENAME is broken if innodb_file_per_table=0

    XMLWordPrintable

Details

    Description

      In MDEV-25524, the logic of rolling back RENAME operations was broken for tables that are stored in the system tablespace (created while the non-default setting innodb_file_per_table=0 was in effect). Any rename operations in the file system (dict_table_t::rename_tablespace()) are only applicable to tables that are stored in .ibd files.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.