MDEV-28752 Rollback of RENAME is broken if innodb_file_per_table=0

This was broken in 54e2e70194b9374543fdfc81a47d583e34771fac (MDEV-25524).