storage/innobase/row/row0uins.cc
@@ -428,7 +428,7 @@ static bool row_undo_ins_parse_undo_rec(undo_node_t* node, bool dict_locked)
 				table, name,
 				!dict_table_t::is_temporary_name(name),
 				true);
-		} else if (table->space) {
+		} else if (table->space && table->space->id) {
 			const auto s = table->space->name();
 			if (len != s.size() || memcmp(name, s.data(), len)) {
 				table->rename_tablespace(name, true);
